[tool.poetry]
name = "infiniportal"
version = "0.1.0"
description = "Pixels.xyz profile viewer and Discord community management tool"
authors = ["Ethan Tran <ethantran@quwin.dev>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
discord-py = "^2.3.2"
requests = "^2.31.0"
flask = "^3.0.3"
aiohttp = "^3.13.3"
aiosqlite = "^0.20.0"
quart = "^0.20.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"